k8s/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meeting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: meeting.local
      http:
        paths:
          - path: /user-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000
          - path: /salle-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: salle-service
                port:
                  number: 5000
          - path: /reservation-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 5000
